[tool.poetry]
name = "rtf2txt"
version = "0.2.4"
description = "A simple command line tool to convert rtf files to plain text."
authors = ["Jonathan Cutrer <joncutrer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
striprtf = "^0.0.13"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "src.rtf2txt.main:app"